[VARKA] The 22 September fuzz campaign: 58 million trees, one finding, and it was row 87
Sixteen JVMs with distinct seeds, run as plain processes off the exported test classpath, did in twenty-five minutes what sbt would take a day over: 28.8 million int-lane and 28.8 million long-lane trees across six arms - the default tree, the long-column bound raised to 2^52 - 1 on task 147's node, and both under -XX:MaxVectorSize=16 and =32 - with every emit option randomised per iteration. The long lane never failed, in 14.4 million trees at the raised bound across three widths, the region row 166 names as never visited. The only failures were two int-lane seeds hitting the 65535-byte epilogue cap row 87 records; their reproducers are in the skills note. The note also records the method, the arms that repeat the int lane, and why a negative campaign is evidence and not row 166's deliverable; section 2.102 carries the campaign beside the row.